# pylint_web2py3

./: .gitignore  README  README.md  pyproject.toml  requirements.txt  setup.py
pylint_web2py/: __init__.py
pylint_web2py2/: __init__.py
pylint_web2py3/: __init__.py
src/pylint_web2py3/: __init__.py
